--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,4 @@
-cmake_minimum_required(VERSION 3.23 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.23)
 target_sources(IntroApp PRIVATE "main.cpp")
 target_include_directories(IntroApp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
 add_subdirectory("bk_lrn_cpp_by_exmpl")
