--- a/src/bk_lrn_cpp_by_exmpl/CMakeLists.txt
+++ b/src/bk_lrn_cpp_by_exmpl/CMakeLists.txt
@@ -1,2 +1,2 @@
-cmake_minimum_required(VERSION 3.23 FATAL_ERROR)
+cmake_minimum_required(VERSION 3.23)
 target_sources(IntroApp PRIVATE example_runner.cpp example_runner.hpp)
