refactoring separate includes, add classes instead of functions, add definitions etc.

--- a/src/CMakeLists.txt
+++ b/src/CMakeLists.txt
@@ -1,4 +1,7 @@
 cmake_minimum_required(VERSION 3.23)
-target_sources(IntroApp PRIVATE "main.cpp")
-target_include_directories(IntroApp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
-add_subdirectory("bk_lrn_cpp_by_exmpl")
+target_sources(IntroApp PRIVATE 
+    ${CMAKE_CURRENT_SOURCE_DIR}/main.cpp
+    ${CMAKE_CURRENT_SOURCE_DIR}/example_runner.cpp
+    )
+target_include_directories(IntroApp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR}/include)
+add_subdirectory("bk_lrncppbyex")
