--- a/src/utils/CMakeLists.txt
+++ b/src/utils/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.23)
-target_sources(IntroApp PRIVATE 
+target_sources(run_examples PRIVATE
     ${CMAKE_CURRENT_SOURCE_DIR}/cli_io.cpp
     )
-# target_include_directories(IntroApp PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
+# target_include_directories(run_examples PRIVATE ${CMAKE_CURRENT_SOURCE_DIR})
